--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <h1>
-        Hello World!
-    </h1>
+    <header>
+      <div>MORITZ KUHN</div>
+      <button>Contact</button>
+    </header>
 	<script src="index.js"></script>
   </body>
 </html>
