--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
   </head>
   <body>
     <header>
-      <div>MORITZ KUHN</div>
-      <button>Contact</button>
+      <div>
+        <h1>Moritz Kuhn</h1>
+        </div>
+      <button type="button">Contact</button>
     </header>
 	<script src="index.js"></script>
   </body>
