added header functionality and page structure

--- a/index.html
+++ b/index.html
@@ -12,8 +12,16 @@
       <div>
         <h1>Moritz Kuhn</h1>
         </div>
-      <button type="button">Contact</button>
+      <button onclick="copy()" id="copy" type="button">E-Mail</button>
     </header>
+    <section class="intro">
+        <div id="message">
+          <p>
+            I'm a designer and developer fascinated by people, technology, algorithms and the intersection of these things. With my work I aim for solutions that respect and add value to the environment they live in.
+          </p>
+        </div>
+
+    </section>
 	<script src="index.js"></script>
   </body>
 </html>
