cleaned up js, added footer w imprint

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <div>
         <h1>Moritz Kuhn</h1>
         </div>
-      <button onclick="copy()" id="copy" type="button">E-Mail</button>
+      <button class="btn-idle" onclick="copy()" id="copy" type="button" title="Copy hello@moritzkuhn.com 💌">E-Mail</button>
     </header>
     <section class="intro">
         <div id="message">
@@ -20,8 +20,8 @@
             I'm a designer and developer fascinated by people, technology, algorithms and the intersection of these things. With my work I aim for solutions that respect and add value to the environment they live in.
           </p>
         </div>
-
     </section>
+    <footer><a href="https://www.moritzkuhn.com/imprint" target="_blank" title="Legal imprint 👨🏻‍⚖️">Imprint</a></footer>
 	<script src="index.js"></script>
   </body>
 </html>
