updated squiggle illustration, updated attributions, fine-tuned interaction, add pf link

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Moritz Kuhn</title>
+  <title>The Design Squiggle · Moritz Kuhn</title>
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="normalize.css">
 </head>
@@ -33,17 +33,18 @@
     </div>
     <div id="message">
       <p id="message-content">
+        The Process of Design Squiggle by Damien Newman<br>
+        <a href="https://thedesignsquiggle.com/" title="Read more" target="_blank">thedesignsquiggle.com</a>
+        <br><br>
         The Design Squiggle is a simple illustration of the design process. The journey of researching, uncovering
         insights, generating creative concepts, iteration of prototypes and eventually concluding in one single designed
         solution. It is intended to convey the feeling of the journey. Beginning on the left with mess and uncertainty
         and ending on the right in a single point of focus: the design.
-        <br><br>
-        <a href="https://thedesignsquiggle.com/" title="Read more" target="_blank">– Damien Newman</a>
       </p>
     </div>
   </section>
   <footer>
-    <a href="https://www.moritzkuhn.com/" target="_blank" title="Moritz Kuhn">Portfolio</a>
+    <a href="https://www.moritzkuhn.com/" target="_blank" title="moritzkuhn.com">Moritz Kuhn</a>
     <a href="https://www.moritzkuhn.com/imprint" target="_blank" title="Legal imprint">Imprint</a>
   </footer>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/bodymovin/5.9.1/lottie.min.js"></script>
