Added Inter font, aligned typgrography, minor layout fixes

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
   <header>
     <div>
-      <h1>The Design Squiggle</h1>
+      <h2>The Design Squiggle</h2>
     </div>
     <div class="sound-controls">
       <input onclick="toggle(this)" type="checkbox" class="toggle" name="sound-toggle" id="sound-toggle" />
@@ -31,22 +31,22 @@
       <lottie-player loop="true" mode="normal" class="lottie" id="lottie-container"
         src="assets/lottie/img/process.json"></lottie-player>
     </div>
-    <div id="message">
-      <p id="message-content">
-        The Process of Design Squiggle by Damien Newman<br>
-        <a href="https://thedesignsquiggle.com/" title="Read more" target="_blank">thedesignsquiggle.com</a>
-        <br><br>
+    <div class="textbox" id="message-content">
+      <h1>The Process of Design Squiggle by Damien Newman</h1>
+      <p>
         The Design Squiggle is a simple illustration of the design process. The journey of researching, uncovering
         insights, generating creative concepts, iteration of prototypes and eventually concluding in one single designed
         solution. It is intended to convey the feeling of the journey. Beginning on the left with mess and uncertainty
         and ending on the right in a single point of focus: the design.
       </p>
+      <a href="https://thedesignsquiggle.com/" title="Read more" target="_blank">thedesignsquiggle.com</a>
     </div>
+      <footer>
+        <a href="https://www.moritzkuhn.com/" target="_blank" title="moritzkuhn.com">Moritz Kuhn</a>
+        <a href="https://www.moritzkuhn.com/imprint" target="_blank" title="Legal imprint">Imprint</a>
+      </footer>
   </section>
-  <footer>
-    <a href="https://www.moritzkuhn.com/" target="_blank" title="moritzkuhn.com">Moritz Kuhn</a>
-    <a href="https://www.moritzkuhn.com/imprint" target="_blank" title="Legal imprint">Imprint</a>
-  </footer>
+
   <script src="https://cdnjs.cloudflare.com/ajax/libs/bodymovin/5.9.1/lottie.min.js"></script>
   <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
   <script src="https://unpkg.com/@lottiefiles/lottie-interactivity@latest/dist/lottie-interactivity.min.js"></script>
